# lidar-vegetation-analysis

./: .gitignore  CMakeLists.txt  CMakeListsOLD.txt
src/: PointCloudMetrics.cpp  PointCloudMetrics.h  PolygonManager.cpp  PolygonManager.h  main.cpp  stat_functions.cpp  stat_functions.h
src/mathematica/: JTSK-to-laz_file_name.nb
src/matlab/: GeoTiff_viewer.mlapp  LDA_2D.m  boxplot_viewer.mlapp  dataFeatureExtractor.m  dataFeatureExtractorCurve.m  dataPreprocessorCurve.m  main.m  main_LDA.m  main_cppStuff.m  main_pca.m  main_pca_only91E0_Tomek.m  main_v2_0.m  plotCurvesPolyshape.m  testing.m  tomek_plot_features.m
src/python/: make_vrt_and_merge.py  merged_to_bands.py  plot_pc_data.py
